# util

./: .gitignore  __init__.py  arg.py  delete  delete_subdirs  dictionary.py  drive.py  eqs.py  eqs.tex  error.py  file.py  filing.py  function.py  g  goog.py  google.py  google_api.py  http.py  index.html  iterable.py  l.py  list.py  log.py  machine_setup  meta.py  obj.py  object.py  parameterize.py  path.py  phy.tex  processing.py  pyproject.toml  python.py  pythonstartup.py  relation.py  requirements.txt  setup.py  spreadsheet.py  test.py  util.py
g/: __init__.py  __main__.py  api.py  drive.py  file.py  files.py  goog.py  map.py  python.py  query.py
g/tests/: test_drive.py
googl/: __init__.py  __main__.py  api.py  file.py  files.py  map.py  python.py  query.py  response.py  spreadsheet.py
scripts/: correct  i.py  rm_directories_by_num_files
src/util/: __init__.py  arg.py  data.py  file.py  obj.py  process.py
tests/: conftest.py  test_drive.py  test_file.py  test_iterable.py  test_relation.py
tests/g/: test_drive.py
tests/googl/: test_file.py  test_main.py  test_map.py
util/: __init__.py  function.py  package.py  test.py  util.py
util/googl/: __init__.py  api.py  file.py  query.py  response.py
util/tests/: conftest.py
util/tests/googl/: test_file.py
