[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "util"
authors = [{name = "M", email = "refits.minxes0h@icloud.com"}]
dynamic = ["version", "description"]
dependencies = [
    "python-magic",
    "pyyaml"
]

[license]
file = "UNLICENSE"

[tool.flit.sdist]
exclude = ["tests/"]